# iLab-10-1

./: .gitignore  BLIP.ipynb  Integration.ipynb  Makefile  README.md  RoBERTa.ipynb  llama.ipynb  main.ipynb  pyproject.toml  readme_ccds_default.md  requirements.txt
backend/: README.md  app.py
backend/app/: __init__.py  config.py
backend/app/models/: vqa_model.py
backend/app/routes/: vqa_routes.py
backend/app/services/: vqa_service.py
backend/app/tests/: test_prediction.py
frontend/medvisor_front-main/: README.md  index.html  package-lock.json  package.json
frontend/medvisor_front-main/medvisor_front-main/: README.md  index.html  package-lock.json  package.json
frontend/medvisor_front-main/src/: Router.jsx  index.css  main.jsx
ilab_10_1/: dataset.py  features.py
ilab_10_1/modeling/: train.py
notebooks/: Multimodal_Densenet_Roberta_Concat_Transformer.ipynb  Notebook1.ipynb  _VQA_Resnet_CoAttention_Transformer.ipynb  iLab.ipynb
notebooks/blip2-model/: config.json
old/: main.ipynb  pyproject.toml
old/docs/: mkdocs.yml
old/docs/docs/: index.md
old/ilab_10_1/: __init__.py  plots.py
old/ilab_10_1/modeling/: predict.py
old/notebooks/: Notebook2.ipynb  Notebook3.ipynb
old/notebooks/blip2-model/: generation_config.json
old/vqa-backend/: app.py  requirements.txt
old/vqa-backend/uploads/: aim.png-data.json
old/vqa-frontend/: package.json
vqa-backend/: README.md  app.py  config.py  database.py
vqa-frontend/: README.md  package-lock.json
vqa-frontend/public/: index.html
vqa-frontend/src/: App.js  styles.css
(+37 files in other folders)
