[tool.poetry]
name = "ilab-10-1"
version = "0.1.0"
description = ""
authors = ["iLab-10-1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
jupyter = "^1.0.0"
notebook = "^7.2.1"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
